lang/derive/tests/ui/fail/05-generic.rs
use liquid_lang as liquid;

use liquid::InOut;
#[derive(InOut)]
pub struct MyStruct<T> {
    a: T,
}

fn main() {}
