lang/derive/tests/ui/fail/05-generic.stderr
error: generic structs are not supported to derive from `InOut` or `State`
 --> $DIR/05-generic.rs:5:20
  |
5 | pub struct MyStruct<T> {
  |                    ^^^
